--- a/memoteca/angular.json
+++ b/memoteca/angular.json
@@ -90,6 +90,7 @@
             ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
+              "src/assets",
               {
                 "glob": "**/*",
                 "input": "public"
